# luminis

./: .cursorignore  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  config.yaml  config.yaml.example  post.txt
cache/: manifest.json
cache/160675/: metadata.json  source.docx
cache/160716/: metadata.json  source.docx
cache/160717/: extracted.md  metadata.json  source.docx
docker/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
docker/config/: config.yaml.example
docker/secrets/: mastodon.yaml.example
docs/: main.md
docs/examples/: mastodon.md  npalist.md
examples/: docx.md  npalist.md  npalist.xsd  rss.md  stages.md
secrets/: mastodon.yaml
src/: lib.rs  main.rs
src/crawlers/: mod.rs  npalist_crawler.rs
src/models/: channel.rs  config.rs  mod.rs  telegram.rs  types.rs
src/publishers/: console.rs  file.rs  mastodon.rs  mod.rs  telegram.rs  utils.rs
src/services/: cache_manager_impl.rs  channels.rs  chat_api.rs  chat_api_local.rs  crawler.rs  documents.rs  mastodon.rs  mod.rs  publisher.rs  settings.rs  summarizer.rs  telegram_api_impl.rs  worker.rs
src/subsystems/: mod.rs  npalistcrawler.rs  scanner.rs  worker.rs
src/traits/: cache_manager.rs  chat_api.rs  crawler.rs  markdown_fetcher.rs  mod.rs  publisher.rs  telegram_api.rs
tests/: integration_publish.rs  test_channel_summarization.rs  test_manifest_metadata_persistence.rs  test_mastodon_critical_error.rs  test_mastodon_params.rs  test_mixed_publish.rs  test_news_reading_order.rs  test_npalist_publish.rs  test_rss_publish.rs
tests/common/: mod.rs
tests/configs/: mastodon_telegram.yaml
tests/mocks/: mapping-v1beta-models-gemini-2.0-flash_generateContent-8OOhY.json  mastodon_status.json  rss.xml
tests/resources/configs/: mastodon_telegram.yaml
tests/resources/mocks/: body-v1beta-models-gemini-2.0-flash_generateContent-8OOhY.json  mastodon_status.json  npalist.xml  npalist_offset50.xml  npalist_offset58.xml  npalist_offset63.xml  rss.xml  source.docx  stages.json
tools/: start.sh
tools/__files/: body-v1beta-models-gemini-2.0-flash_generateContent-CdStr.json
tools/mappings/: mapping-v1beta-models-gemini-2.0-flash_generateContent-CdStr.json
