[package]
name = "luminis"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
debug-assertions = false
strip = "symbols"
incremental = false

[profile.dev]
debug = true
opt-level = 0

[dependencies]
async-trait = "0.1.88"
dotenv = "0.15.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
scraper = "0.20.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
dashmap = "6.1.0"
zip = "0.6.6"
mastodon-async = "1.3.2"
futures-util = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
regex = "1.10.6"
hf-hub = "0.4.3"
tera = "1.19.1"
once_cell = "1.19.0"

ahash = "0.8.12"

# Unified multi-provider AI client
ai-lib = "0.3.4"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
roxmltree = "0.20.0"
tempfile = "3.10.1"
markdownify = "0.2.1"
bon = "3.7.2"

[dev-dependencies]
wiremock = "0.6"
anyhow = "1.0"
rstest = "0.18"

