[package]
name = "luminis"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
debug-assertions = false
strip = "symbols"
incremental = false

[profile.dev]
debug = true
opt-level = 0

[dependencies]
async-trait = "0.1.89"
dotenv = "0.15.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
scraper = "0.24.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
dashmap = "6.1.0"
zip = "5.1.1"
mastodon-async = "1.3.2"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
regex = "1.11.2"
hf-hub = "0.4.3"
tera = "1.20.0"
once_cell = "1.21.3"

ahash = "0.8.12"

# Unified multi-provider AI client
ai-lib = "0.3.4"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
derive_more = { version = "1.0.0", features = ["from", "into", "display", "as_ref", "from_str"] }
roxmltree = "0.20.0"
tempfile = "3.22.0"
markdownify = "0.2.1"
bon = "3.7.2"
tokio-graceful-shutdown = { version = "0.17.1", features = ["tracing"] }
backon = "1.5.2"
anyhow = "1.0.95"
clap = { version = "4.5.48", features = ["derive"] }
urlencoding = "2.1.3"

[dev-dependencies]
rstest = "0.26.1"
wiremock = "0.6.5"
serial_test = "3.2.0"
